samples/_failures_safe/1761694784_76d57b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b9b4474.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_7b9b4474.c:158:20: error: expected ‘;’ at end of input
  158 |         token->line
      |                    ^
      |                    ;
./samples/SAFE/__tmp_7b9b4474.c:158:9: error: expected declaration or statement at end of input
  158 |         token->line
      |         ^~~~~
./samples/SAFE/__tmp_7b9b4474.c:158:9: error: expected declaration or statement at end of input
